Fixed a redundant scrollbar on web page
The max-height is 1px short, the whole bar on the left is 207px tall.
Changing the max-height to 208px should be sufficient; but disabling this parameter completely would do it too.

--- a/seesaw/public/style.css
+++ b/seesaw/public/style.css
@@ -299,7 +299,7 @@ table.time-left td span {
   margin: 0 3px 0 5px;
   padding-right: 2px;
   width: 200px;
-  max-height: 206px;
+  max-height: 208px;
   overflow-y: auto;
 }
 .item.closed ol.tasks {
